fix home x-overflow issue, update background image

--- a/components/Hero.module.scss
+++ b/components/Hero.module.scss
@@ -17,7 +17,7 @@
 
 .content {
   height: (calc(100vh - 8rem));
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
